added prod keys

--- a/app/views/topocoding/index.rhtml
+++ b/app/views/topocoding/index.rhtml
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://topocoding.com/api/getapi_v1.php?key=NBOJQVHAWKVLRUG"></script>
+<script type="text/javascript" src="http://topocoding.com/api/getapi_v1.php?key=<%= @keys[:topo] %>"></script>
 
 <% form_tag 'javascript: controller.topocode();' do -%>
   from : <%= text_field_tag "from" %><br />
