--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -7,8 +7,8 @@
 
   <title>untitled</title>
   <%= javascript_include_tag :defaults %>
-  
-  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAA9VOSeYNzYR1HdqCp_eD-WRRA6qMlH81_n23nelqba7RlgyJneBR7iJ-ri4wGf14-6a3QJsIHUCk9Iw"
+    
+  <script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=<%= @keys[:maps] %>"
         type="text/javascript"></script>
       <script type="text/javascript">
 
