--- a/app/views/topocoding/index.rhtml
+++ b/app/views/topocoding/index.rhtml
@@ -6,5 +6,5 @@
   <%= submit_tag "go !" %>
 <% end -%>
 
-<div id="map" style="display: none;"></div>
+<div id="map" style="width: 500px; height: 300px;"></div>
 <div id="values"></div>
