--- a/app/views/topocoding/index.rhtml
+++ b/app/views/topocoding/index.rhtml
@@ -7,5 +7,5 @@
 <% end -%>
 
 <div id="map" style="width: 500px; height: 300px;"></div>
-distance (m) ; altitude (m)<br />
+distance (m) ; altitude (m) ; duration (sec)<br />
 <div id="values"></div>
