--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,9 +1,18 @@
 body, p, h1, h2, h3 { margin: 0; padding: 0; border: 0;}
 
-body { background-color: #556677;}
+body { padding: 30px 0; background-color: #4B7399;}
 
-#container { min-height: 800px; width: 600px; margin: 0 auto; background-color: white;}
+#container { padding-bottom: 30px; border: 1px solid black; width: 700px; margin: 0 auto; background-color: white;}
 
 #container #header { height: 80px; text-align: center; padding-top: 15px;}
 
 #container #content { margin: 0 auto; width: 500px;}
+
+#container #content #from_to { margin-bottom: 20px;}
+#container #content #from_to td.lb { padding-right: 20px;}
+
+#container #content #map { border: 1px solid black; width: 500px; height: 300px; margin-bottom: 20px;}
+
+#container #content #values {width: 100%;}
+
+#container #content #spinner { text-align: center; margin-top: 20px;}
