--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -4,6 +4,7 @@
 
   %head
     %meta{"http-equiv" => "Content-Type", :content => "text/html; charset=utf-8"}
+    %meta{:name => "verify-v1", :content => "88cRlQmQZbpel73dpqSYOV55qqLlkRJOj5mncT0h4dU="}
     %title Topocoding for Students
 
     / javascripts
