back to CVS output

--- a/app/views/topocoding/index.html.haml
+++ b/app/views/topocoding/index.html.haml
@@ -16,12 +16,7 @@
 
 %div#map
 
-%table#values{:border => "0", :cellspacing => "0", :cellpadding => "0", :style => "display: none"}
-
-  %tr
-    %th distance (m)
-    %th altitude (m)
-    %th durée (sec)
+%div#values{:style => "display: none"}
     
 %div#spinner{:style => "display: none"}
   %img{:src => "/images/spinner.gif"}
